Bug 156038 - SVG: > in css selector
Summary: SVG: > in css selector
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:24.2.0 target:7.6.0.0.beta2
Keywords:
Depends on:
Blocks: SVG-Import
  Show dependency treegraph
 
Reported: 2023-06-23 16:09 UTC by Xisco Faulí
Modified: 2023-06-27 08:05 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file (620 bytes, image/svg+xml)
2023-06-23 16:09 UTC, Xisco Faulí
Details
sample 2 (656 bytes, image/svg+xml)
2023-06-23 16:52 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-06-23 16:09:41 UTC
Created attachment 188068 [details]
sample file

Steps to reproduce:
1. Open attached document

-> first and third rectangles should be blue and second and forth green
Comment 1 Xisco Faulí 2023-06-23 16:52:06 UTC
Created attachment 188069 [details]
sample 2
Comment 2 stragu 2023-06-26 12:36:45 UTC
Confirmed with sample file in:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: bbf6fa94a92abc1085addaba20519ee0166bae5e
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Version: 7.6.0.0.beta1 (X86_64) / LibreOffice Community
Build ID: be55b15d98c5f059483845a183fcb5ea8023d27c
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 3 Commit Notification 2023-06-26 20:46:13 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/930eb99a712a3ad9b76e9edb68bbcea68af36656

tdf#156038, tdf#78232: support css child combinator

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2023-06-27 08:05:17 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/11746198e46909913a5085907dc9d1a8593a0b90

tdf#156038, tdf#78232: support css child combinator

It will be available in 7.6.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.