tdf#156038, tdf#78232: support css child combinator

Change-Id: I874c368f66db97017357030867f1255551996228
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153626
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>